--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
   "name": "rw-ab",
   "version": "1.0.0",
-  "description": "App Pass - gvsi avwt igyw jsxp",
+  "description": "App Pass ex - hjsd fsds sfrs sfes",
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "start": "npx nodemon index.js",
+    "start": "node index.js",
+    "dev": "npx nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -19,7 +20,7 @@
     "express": "^5.1.0",
     "express-validator": "^7.3.1",
     "jsonwebtoken": "^9.0.2",
-    "nodemailer": "^7.0.10",
+    "nodemailer": "^7.0.12",
     "request-ip": "^3.3.0",
     "tailwindcss": "^4.1.17"
   }
