--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "rw-ab",
   "version": "1.0.0",
-  "description": "App Pass ex - hjsd fsds sfrs sfes",
+  "description": "App Pass - gvsi avwt igyw jsxp",
   "main": "index.js",
   "type": "module",
   "scripts": {
